# sequel

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  debug_iam.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: optimize.md  other-resources.md  phase-10-release-plan.md  phase-7-performance-plan.md  phase-8-ux-plan.md  phase-9-testing-docs-plan.md
docs/architecture/: overview.md  services.md  widgets.md
docs/contributing/: architecture.md  development.md
docs/examples/: advanced.md  basic-usage.md
docs/user-guide/: authentication.md  configuration.md  installation.md  troubleshooting.md  usage.md
scripts/: bump_version.py  debug_mig.py  profile.py
src/sequel/: __init__.py  __main__.py  app.py  cli.py  config.py  config_file.py
src/sequel/cache/: memory.py
src/sequel/models/: base.py  clouddns.py  cloudrun.py  cloudsql.py  compute.py  gke.py  iam.py  loadbalancer.py  project.py  secrets.py  storage.py
src/sequel/screens/: main.py
src/sequel/services/: base.py  clouddns.py  cloudrun.py  cloudsql.py  compute.py  gke.py  iam.py  loadbalancer.py  projects.py  pubsub.py  secrets.py  storage.py
src/sequel/state/: __init__.py  resource_state.py
src/sequel/utils/: logging.py
src/sequel/widgets/: detail_pane.py  loading_progress.py  refresh_modal.py  resource_tree.py  status_bar.py  toast.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/integration/: conftest.py  test_cache_lifecycle.py  test_concurrent_access.py  test_full_workflow.py  test_network_resources.py
tests/unit/: test_commands.py  test_config.py  test_config_file.py  test_logging.py  test_version.py
tests/unit/cache/: test_memory.py
tests/unit/models/: test_base.py  test_clouddns.py  test_cloudrun.py  test_cloudsql.py  test_compute.py  (+10 more)
(+21 files in other folders)
